Update: I added the map of the US YAY

--- a/lab6_Map.html
+++ b/lab6_Map.html
@@ -7,11 +7,22 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="" defer></script>
     <script src="lab6_Map.html.js" defer></script>
+    <style>
+        #map { height: 800px; }
+
+    </style>
 
 </head>
 
 <body>
     <h1 style="font-weight: strong;"> Map of US</h1>
+    <div id="map"></div>
+    <div id="div-container">
+        <div id="cord1"></div>
+        <div id="cord2"></div>
+        <div id="cord3"></div>
+    </div>
+
 </body>
 
 </html>
