--- a/lab6_Map.html
+++ b/lab6_Map.html
@@ -18,9 +18,18 @@
     <h1 style="font-weight: strong;"> Map of US</h1>
     <div id="map"></div>
     <div id="div-container">
-        <div id="cord1"></div>
-        <div id="cord2"></div>
-        <div id="cord3"></div>
+        <div id="cord1">
+            <h1 id="latAndLong1"></h1>
+            <p id="locality1"></p>
+        </div>
+        <div id="cord2">
+            <h1 id="latAndLong2"></h1>
+            <p id="locality2"></p>
+        </div>
+        <div id="cord3">
+            <h1 id="latAndLong3"></h1>
+            <p id="locality3"></p>
+        </div>
     </div>
 
 </body>
